--- a/style.css
+++ b/style.css
@@ -1,440 +1,387 @@
-*{
-   margin:0px;
-   box-sizing:border-box;
-   border:0px;
-   max-width:100vw;
-   background-color:;
-   font-family: 'Roboto', sans-serif;
-  align-self:center;
-  position:relative;
-  transition-duration: .11s;
-  animation-duration: .2s;
-  }
+* {
+  margin: 0px;
+  box-sizing: border-box;
+  border: 0px; 
+width: 100%;
+  font-family: "Roboto", sans-serif;
+  align-self: center;
+  position: relative;
+  transition-duration: 0.11s;
+  animation-duration: 0.2s;
+}
+
+body {
+  z-index: -100;
+  background-color: rgba(0, 0, 0, 1);
+  background-size: contain;
+  background-repeat: repeat;
   
-body{
-z-index:-100;
-
-background-image:url("https://cdn.pixabay.com/photo/2016/10/02/15/51/background-1709786_1280.jpg");
-
-background-color: rgba(0, 0, 0, 1);
-background-position:;
-background-size:contain;
-background-repeat:repeat;
-width:100vw;
 }
-.cookie{
-display:none;
-position:fixed  ;
-background-color: rgba(125, 125, 125, 0.6);
-z-index:200;
-    width:100%;
-    height:100%;
-    background-color:;
-    color:white;
-    backdrop-filter: blur(3px);
-    text-align:center;
-    padding:80% 5% 5% 30%;
-    
+.cookie {
+  position: absolute;
+  
+  background-color: rgba(125, 125, 125, 0.5);
+  z-index: 200;
+  width: 100%;
+  height: 100%;
+  color: white;
+  backdrop-filter: blur(3px);
+  text-align: center;
+  margin:10px;
+  padding:auto;
+  padding-top: 25vh;
+ 
+  
+}
+a, a:visited {
+  color: inherit;
+  margin:5px;
+}
+.cookie2{
+  display: none;
 }
 
+nav {
+  position: fixed;
+  top: 0px;
+  display: inline-flex;
+  align-items: center center;
+  justify-content: space-around;
+  height: 15vh;
+  width: 100%;
+  z-index: 97;
+}
 
-nav{
-position:fixed;
-top:0px;
-display:inline-flex;
-align-items: center center;
-justify-content:space-around;
-height:15vh;
-width:100vw;
-z-index:97;}
-    
-    
-.m1{
-position:fixed;
-top:15vh;
-max-height:15vh
-height:15vh;
-z-index:96;
-color:white;
-text-shadow:2px 2px 2px black;
--webkit-box-reflect:below 0px linear-gradient(transparent,grey);}
-    
+.m1 {
+  position: fixed;
+  top: 12vh;
+  max-height: 15vh;
+  height: 5vh;
+  z-index: 96;
+  color: white;
+
+  -webkit-box-reflect: below 0px linear-gradient(transparent, grey);
+}
+
 .m1:hover {
-font-size:1.5rem;
-transition-duration:2s;
-webkit-box-reflect:below 0px linear-gradient(transparent,blue); 
-max-height:15vh;
+  font-size: 1.5rem;
+  transition-duration: 2s;
+  -webkit-box-reflect: below 0px linear-gradient(transparent, blue);
+  max-height: 12vh;
 }
 /*
-.m1:focus .u .we .carr .ov .earth{
+.m1:focus .u .we .carr .ov .
+{
     display:none ;
 } zamknij karte menu gdy klik na marquee
-*/ 
-
-.g1 {position:absolute;
-top:25vh;
-flex-wrap:wrap;
-position:relative;
-display:flex;
-align-items: flex-start;
-z-index:0;
-width:100vw;
-max-width:100vw;
-color:white;
-height:auto;}
-    
-    
-.navbutton{
-z-index:98;
-min-width:12%;
-max-height:15vh;
-height:auto;
-width:auto;
-background-color: rgba(255, 255, 255, 0.3);
-color:white;
-font-family:'Roboto', sans-serif; monospace;
-align-self:center;
-box-shadow:-2px -2px 20px 1px black;
-font-size:16px;
-border:1px solid white;
--webkit-box-reflect:below 1px linear-gradient(transparent, grey);
-
-        }
-   
-   
-.navbutton:focus{
-z-index:99;
-transform:scale(1.2);
-background-image:url("https://cdn.pixabay.com/photo/2016/10/02/15/51/background-1709786_1280.jpg");
-background-size:cover;
-box-shadow: -3px -3px 20px 6px black 
-,inset 0px -0px 10px 0px black;
- -webkit-box-reflect:below 1px linear-gradient(transparent, grey); 
- transition: 1s ease-in-out; 
-}
-/*
-
-.navbutton:hover{
-    transform:scale(1.3);
-}
 */
-.navbutoff{
-display:none;
+
+.g1 {
+  position: absolute;
+  top: 25vh;
+  flex-wrap: wrap;
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  z-index: 0;
+  
+ 
+  color: white;
+  height: auto;
 }
 
+.navbutton {
+  z-index: 98;
+  min-width: 12%;
+  max-height: 15vh;
+  height: auto;
+  width: auto;
+  background-color: rgba(255, 255, 255, 0.3);
+  color: white;
+  font-family: "Roboto", sans-serif, monospace;
+  align-self: center;
+  box-shadow: -2px -2px 20px 1px black;
+  font-size: 16px;
+  border: 1px solid white;
+  -webkit-box-reflect: below 1px linear-gradient(transparent, grey);
+}
+.navbutton:hover {
+  transform: scale(1.1);
+  transition: .5s ease-in-out;
+  background-color: rgba(255, 255, 255, 0.788);
+}
+
+.navbutton:focus {
+  z-index: 99;
+  transform: scale(1.2);
+  background-image: url("https://cdn.pixabay.com/photo/2016/10/02/15/51/background-1709786_1280.jpg");
+  background-size: cover;
+  transition: 1s ease-in-out;
+}
+
+.navbutoff {
+  position: absolute; 
+  height: 24px;
+  width: 24px;
+  right:15px;
+  top:15px;
+}
 
 .u {
-backdrop-filter:blur(1px);
-oppacity:1;
-z-index:121;
-padding:;
-background-color:;
-background-color: rgba(125, 125, 0, 0.6);
-width: 95vw;
-height: 75vh;
 position: absolute;
-top: 20vh;
-left:2vw; 
-object-fit:cover;
-transition-duration:0.2s;
-
-color:white;
+top:15vh;
+right:5vw;
+z-index: 150;
+height: 45vh;
+width: 50vw;
 }
-.u2 {opacity: 0;
-background-color:white;
-color:black;
-z-index:-100;
+.u2 {
+  display:none;
 }
 
-.u * {
-font-size: 16px;
-letter-spacing: 2px;
-word-spacing: 2px;
-color: #FFFFFF;
-font-weight: 400;
-font-style: italic;
-font-variant: normal;
-text-transform: none;
-}
-.login-form-button{
-font-size: 40px;
 
-height:auto;
-width:auto;
-background:black; 
-color:white;
-
-align-self:center;
-border:3px solid black;}
-
-
-
-
-
-#login-form-button-log{
-position:relative ;
-width:100%;
-height:75%;
-background-image:url("https://cdn.pixabay.com/photo/2016/10/02/15/51/background-1709786_1280.jpg");
-background-size:cover;
-background-repeat:no-repeat ;
-background-position:center;
+.login-form-button {
+  font-size: 40px;
+  background: black;
+  color: white;
+  align-self: center;
+  border: 3px solid black;
+  margin:5px;
 }
 
-#login-form-button-new{
-position:relative ;
-width:100%;
-height:25%;
-background-image:url("https://cdn.pixabay.com/photo/2016/10/02/15/51/background-1709786_1280.jpg");
-background-size:cover;
-background-repeat:no-repeat ;
-background-position:center;}
-
-.login-form-button-submit{
-    
-    
+#login-form-button-log {
+  position: relative;
+  width: 100%;
+  height: 75%;
+  border: 1px solid white;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
-#login-form{
--webkit-transform-origin: top center;
--webkit-animation-name: login-form-animation;
--webkit-animation-duration: 2s;
--webkit-animation-iteration-count: 1;
--webkit-animation-timing-function: ease;
--webkit-animation-fill-mode: forwards;
--webkit-animation-play-state: paused;}
-@-webkit-keyframes login-form-animation {
+#login-form-button-new {
+  position: relative;
+  width: 100%;
+  height: 25%;
+  border: 1px solid white;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.login-form-button-submit {
+  color: white;
+}
+
+#login-form {
+  transform-origin: top center;
+  animation-name: login-form-animation;
+  animation-duration: 2s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+  animation-play-state: paused;
+}
+@keyframes login-form-animation {
   0% {
-    -webkit-transform: rotateX(90deg) scale(1) skew(0deg) translate(0px);
+    transform: rotateX(90deg) scale(1) skew(0deg) translate(0px);
   }
-  
+
   100% {
-    -webkit-transform: rotateX(0deg) scale(1) skew(0deg) translate(0px);
+    transform: rotateX(0deg) scale(1) skew(0deg) translate(0px);
   }
 }
 
-.logreg-form{
-align-self:center;
-line-height:2;
-position:absolute;
-z-index:1;
-display:none;
-background:(rgba(255, 255, 255, 1));
-width:100%;
-height:100%;
-top:0;
-opacity: 0.8;
-backdrop-filter: blur(50px);
+.logreg-form {
+  align-self: center;
+  line-height: 2;
+  position: absolute;
+  z-index: 1;
+  display: none;
+  background: (rgba(255, 255, 255, 1));
+  width: 100%;
+  height: 100%;
+  top: 0;
+  opacity: 0.8;
+  backdrop-filter: blur(50px);
+ 
 }
 
+#reg-form {
+  transform-origin: bottom center;
+  animation-name: reg-form-animation;
+  animation-duration: 2s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+  animation-play-state: paused;
+}
 
-#reg-form{
--webkit-transform-origin: bottom center;
--webkit-animation-name: reg-form-animation;
--webkit-animation-duration: 2s;
--webkit-animation-iteration-count: 1;
--webkit-animation-timing-function: ease;
--webkit-animation-fill-mode: forwards;
--webkit-animation-play-state: paused;}
-
-@-webkit-keyframes reg-form-animation {
+@keyframes reg-form-animation {
   0% {
-    -webkit-transform: rotateX(90deg) scale(1) skew(0deg) translate(0px);
+    transform: rotateX(90deg) scale(1) skew(0deg) translate(0px);
   }
-  
+
   100% {
-    -webkit-transform: rotateX(0deg) scale(1) skew(0deg) translate(0px);
+    transform: rotateX(0deg) scale(1) skew(0deg) translate(0px);
   }
 }
-.login-form-h2{
+.login-form-h2 {
   font-size: 25px;
-    background-color: black;
+  background-color: black;
 }
 
-
-
-.login-form-field{ 
+.login-form-field {
   border-bottom: 2px ridge #ffffff;
-border-left: 2px ridge #ffffff;
-    width: 80%;
-    
+  border-left: 2px ridge #ffffff;
+  width: 80%;
+  margin:auto 3%;
 }
-#username-field{}
-
-#password-field{
-    
+#username-field {
 }
-#login-form-submit{
 
-    background-color:;}
-    
-.login-form-button-submit{
-    
-
+#password-field {
 }
+#login-form-submit {
+  
+}
+
+.login-form-button-submit {
+  margin:5%;
+}
+.modal{
+  backdrop-filter: blur(1px);
+  z-index: 121;
+  background-color: rgba(44, 99, 138);
+  width: 90vw;
+  height: 75vh;
+  position: fixed;
+  top: 20vh;
+  left: 5vw;
+  object-fit: cover;
+  transition-duration: 0.2s; 
+  text-shadow: 2px 2px 2px 2px black;  
+  color: white;
+  align-self: center;
+  text-align: left;
+  border: 1px solid white;  
+  line-height: 1.3;
+  align-items: center;
+  padding: 3%;
+  margin-top: 1%;
+  margin:10px;
+  background-size: cover;
+  opacity: 0.9;
+    -webkit-box-reflect: below 0px linear-gradient(transparent, grey);
+}
+
+
+.modal .h2{
+  margin:10px;
+}
+
+
 .we {
-backdrop-filter:blur(1px);
-oppacity:1;
-z-index:121;
-padding:5px;
-background-color:;
-background-color: rgba(125, 125, 0, 0.6);
-width: 90vw;
-height: 80vh;
-position: absolute;
-top: 20vh;
-left:5vw; 
-object-fit:cover;
-transition-duration:0.2s;
 
-color:white;
+
+  
 }
 
-.we2 {opacity: 0;
-background-color:white;
-color:black;
-z-index:-100;}
+.we2 {
+  
+  display:none;
+}
+
 
 .earth {
-backdrop-filter:blur(5px);
-oppacity:1;
-z-index:121;
-padding:5px;
-background-color:;
-background-color: rgba(125, 125, 125, 0.6);
-width: 90vw;
-height: auto;
-position: absolute;
-top: 20vh;
-left:5vw; 
-object-fit:cover;
-transition-duration:0.2s;
-
-color:white;
+ 
 }
 
-.earth2 {opacity: 0;
-background-color:white;
-color:black;
-z-index:-100;}
+.earth2 {
+  
+  display:none;
+}
 
 .ov {
-backdrop-filter:blur(2px);
-oppacity:1;
-z-index:121;
-padding:5px;
-background-color:;
-background-color: rgba(125, 125, 165, 0.6);
-width: 90vw;
-height: 80vh;
-position: absolute;
-top: 20vh;
-left:5vw; 
-object-fit:cover;
-transition-duration:0.2s;
-
-color:white;
+  
 }
 
-.ov2 {opacity: 0;
-background-color:white;
-color:black;
-z-index:-100;}
+.ov2 {
+
+  display:none;
+}
 
 .carr {
-backdrop-filter:blur(25px);
-oppacity:;
-z-index:121;
-padding:;
-background-color:;
-background-color: rgba(125, 125, 125, 0.6);
-width: 90vw;
-height:auto;
-position: absolute;
-top: 20vh;
-left:5vw; 
-object-fit:cover;
-transition-duration:0.2s;
-
-color:white;
+ 
 }
-.carr2 {opacity: 0;
-background-color:white;
-color:black;
-z-index:-100;}
-
-.art{text-shadow:2px 2px 2px 2px black;
-    z-index:97;
-    width:100%;
-    height:auto;
-    color:white;
-    align-self:center;
-    text-align:left ;
-    border:1px solid white;
-   padding:;
-   line-height: 1.3;
-   align-items: center;
-   padding: 3%;
-   margin-top:1%;
+.carr2 {
+ 
+  display:none;
 }
-.aimg{position:relative;
 
-max-width:100vw;
-width:100%;
-height:auto;
-align-self:center;
-object-fit:contain;
-opacity:90%;
-align-items: center;
-margin:3% 0% 3% 0%;
-margin:;;
+.art {
+  text-shadow: 2px 2px 2px 2px black;
+  z-index: 97;
+  width:96%;
+  height: auto;
+  color: white;
+  align-self: center;
+  text-align: left;
+  border: 1px solid white;
+  line-height: 1.3;
+  align-items: center;
+  padding: 3%;
+  margin: 5px auto;}
+.art .h2{
+  margin:10px;
 }
--webkit-transform: rotateX(90deg) scale(1) skew(0deg) translate(0px);
-    
 
-.aimg:hover{opacity:8%;
-width:100%;
-hight:auto;
-transform:scale(1);
-transition-duration:0.5s;
--webkit-transform: rotateX(90deg) scale(1.3) skew(0deg) translate(0px);
-
-};
-    
-.img{
-
-padding-top:0.25%;
-z-index:1;
-max-width:100vw;
-width:100vw;
-height:auto;
-align-self:center;
-object-fit:contain;
-opacity:70%;
+.aimg {
+  position: relative;
+  width: inherit;
+  height: auto;
+  align-self: center;
+  object-fit: contain;
+  opacity: .9;
+  align-items: center;
+  padding: 3%;
+  margin: 5px auto ;
+  
 }
 
 
 
-.img:hover{
-opacity:100%;
-transition-duration:.5s;
-transform:scale(1);
+.img {
+  padding-top: 0.25%;
+  z-index: 1;
+  max-width: 100vw;
+  width: auto;
+  height:50%;   
+  align-self: right;
+  object-fit: contain;
+  opacity: 70%;
 }
 
+.img:hover {
+  opacity: 100%;
+  transition-duration: 0.5s;
+  transform: scale(1);
+}
 
+.foot {
+  display: inline-flex;
+  align-items: center center;
+  justify-content: space-around;
+  opacity: 0.8;
+  position: fixed;
+  width: 100%;
+  z-index: 137;
+  
+  bottom: 0vh;
 
-.foot{
-display:inline-flex;
-align-items: center center;
-justify-content:space-around;
-opacity:0.5;
-position: fixed;
-width: 100%;
-z-index:137;
-background-color:;
-bottom:0vh;
+  position: fixed;
+}
 
-position:fixed;
-
-
+.footbutton{
+  align-self:center
 }
