--- a/style.css
+++ b/style.css
@@ -11,24 +11,25 @@ width: 100%;
 }
 
 body {
-  z-index: -100;
   background-color: rgba(0, 0, 0, 1);
-  background-size: contain;
-  background-repeat: repeat;
+  background-size:cover;
+  background-repeat:no-repeat;
+  background-image:url("https://upload.wikimedia.org/wikipedia/commons/2/2c/North_America_from_low_orbiting_satellite_Suomi_NPP.jpg");
+  background-attachment: fixed;
   
 }
 .cookie {
   position: absolute;
-  
   background-color: rgba(125, 125, 125, 0.5);
-  z-index: 200;
+  z-index: 4;
   width: 100%;
   height: 100%;
   color: white;
   backdrop-filter: blur(3px);
   text-align: center;
-  margin:10px;
-  padding:auto;
+  margin:0px;
+  padding-left: 25%;
+  padding-right:25%;
   padding-top: 25vh;
  
   
@@ -49,7 +50,7 @@ nav {
   justify-content: space-around;
   height: 15vh;
   width: 100%;
-  z-index: 97;
+  z-index:1;
 }
 
 .m1 {
@@ -57,10 +58,10 @@ nav {
   top: 12vh;
   max-height: 15vh;
   height: 5vh;
-  z-index: 96;
+  z-index: 2;
   color: white;
-
   -webkit-box-reflect: below 0px linear-gradient(transparent, grey);
+  
 }
 
 .m1:hover {
@@ -83,15 +84,11 @@ nav {
   position: relative;
   display: flex;
   align-items: flex-start;
-  z-index: 0;
-  
- 
   color: white;
   height: auto;
 }
 
-.navbutton {
-  z-index: 98;
+.navbutton {  
   min-width: 12%;
   max-height: 15vh;
   height: auto;
@@ -104,6 +101,9 @@ nav {
   font-size: 16px;
   border: 1px solid white;
   -webkit-box-reflect: below 1px linear-gradient(transparent, grey);
+  padding-left: 5%;
+  padding-right:5%;
+  z-index: 1;
 }
 .navbutton:hover {
   transform: scale(1.1);
@@ -112,7 +112,6 @@ nav {
 }
 
 .navbutton:focus {
-  z-index: 99;
   transform: scale(1.2);
   background-image: url("https://cdn.pixabay.com/photo/2016/10/02/15/51/background-1709786_1280.jpg");
   background-size: cover;
@@ -131,9 +130,9 @@ nav {
 position: absolute;
 top:15vh;
 right:5vw;
-z-index: 150;
 height: 45vh;
 width: 50vw;
+z-index: 1;
 }
 .u2 {
   display:none;
@@ -196,14 +195,14 @@ width: 50vw;
   align-self: center;
   line-height: 2;
   position: absolute;
-  z-index: 1;
   display: none;
-  background: (rgba(255, 255, 255, 1));
+  background:black;
   width: 100%;
   height: 100%;
   top: 0;
   opacity: 0.8;
   backdrop-filter: blur(50px);
+  margin:0;
  
 }
 
@@ -250,12 +249,11 @@ width: 50vw;
   margin:5%;
 }
 .modal{
-  backdrop-filter: blur(1px);
-  z-index: 121;
-  background-color: rgba(44, 99, 138);
+  backdrop-filter: blur(1px); 
+  background-color: rgba(44, 99, 138, 0.432);
   width: 90vw;
   height: 75vh;
-  position: fixed;
+  position: absolute;
   top: 20vh;
   left: 5vw;
   object-fit: cover;
@@ -271,8 +269,12 @@ width: 50vw;
   margin-top: 1%;
   margin:10px;
   background-size: cover;
-  opacity: 0.9;
-    -webkit-box-reflect: below 0px linear-gradient(transparent, grey);
+
+  opacity: 0.95;
+  z-index:1;
+ padding-left: 25%;
+  padding-right:25%;
+  padding-top: 25vh;
 }
 
 
@@ -321,7 +323,6 @@ width: 50vw;
 
 .art {
   text-shadow: 2px 2px 2px 2px black;
-  z-index: 97;
   width:96%;
   height: auto;
   color: white;
@@ -339,7 +340,7 @@ width: 50vw;
 .aimg {
   position: relative;
   width: inherit;
-  height: auto;
+  height: 50vh;
   align-self: center;
   object-fit: contain;
   opacity: .9;
@@ -353,17 +354,16 @@ width: 50vw;
 
 .img {
   padding-top: 0.25%;
-  z-index: 1;
-  max-width: 100vw;
-  width: auto;
-  height:50%;   
-  align-self: right;
+  
+  
+  
+  
   object-fit: contain;
-  opacity: 70%;
+  opacity: .55;
 }
 
 .img:hover {
-  opacity: 100%;
+  opacity: 1;
   transition-duration: 0.5s;
   transform: scale(1);
 }
@@ -374,11 +374,8 @@ width: 50vw;
   justify-content: space-around;
   opacity: 0.8;
   position: fixed;
-  width: 100%;
-  z-index: 137;
-  
+  width: 100%;  
   bottom: 0vh;
-
   position: fixed;
 }
 
